"ssh-keygen -A -m PEM" does not work.
https://github.com/random-archer/mkinitcpio-systemd-tool/issues/83

The manpage of ssh-keygen describes option "-A" as
"For each of the key types (rsa, dsa, ecdsa and ed25519) for which host keys do not exist, generate the host keys [...]."

But since the host keys in /etc/ssh/ already exists (because they are generated on the first invocation of sshd), nothing will be generated/regenerated/converted. Id2ndR suggested the for-loop method instead.

--- a/src/initrd-dropbear.service
+++ b/src/initrd-dropbear.service
@@ -14,7 +14,10 @@
 
 # note:
 # dropbear-convert needs host keys in pem format
-# to regenerate host keys use: `ssh-keygen -A -m PEM`
+# to regenerate host keys use:
+# for format in dsa ecdsa ed25519 rsa; do
+#   ssh-keygen -A -p -m PEM -f /etc/ssh/ssh_host_${format}_key
+# done
 
 # service dependencies:
 # - https://www.archlinux.org/packages/community/x86_64/dropbear/
